--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "docker-centos-hello",
+  "name": "docker-ubuntu-hello",
   "private": true,
   "version": "0.0.1",
-  "description": "Node.js Hello world app on CentOS using docker",
-  "author": "Daniel Gasienica <daniel@gasienica.ch>",
+  "description": "Node.js Hello world app on Ubuntu using docker",
+  "author": "Monty Lennie <montylennie@gmail.com>",
   "dependencies": {
-    "express": "3.2.4"
+    "express": "*"
   }
 }
